<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_10sdp"
    android:background="@drawable/button_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_image"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/_5sdp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_drink"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/coffee"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_toEndOf="@id/card_view_image"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="@dimen/_110sdp">
        <TextView
            android:layout_weight="1"
            android:id="@+id/text_drink_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_drink_name"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/text_price"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/text_price_before_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_price_before_discount"
                android:textColor="@color/black"
                android:textSize="@dimen/_7sdp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/text_category_drink"
                android:textSize="@dimen/_10sdp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/text_category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_outstanding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/text_outstanding"
                android:textSize="@dimen/_10sdp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/text_outstanding_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_outstanding_no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="@dimen/_110sdp">
        <ImageView
            android:id="@+id/image_delete"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20ssp"
            android:src="@drawable/ic_delete"/>
        <ImageView
            android:id="@+id/image_edit"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20ssp"
            android:src="@drawable/ic_edit"/>
    </LinearLayout>

</RelativeLayout>