<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.admin.drink.AddDrinkActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_drink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarStyle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_title_detail_song_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/text_add_new_dink"
                android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColorHint="#686767"
            android:hint="@string/hint_name"
            android:paddingHorizontal="@dimen/_20sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_add_drink">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:textColor="#686767"
            android:text="@string/text_category_hint"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@+id/spinner_category"
            app:layout_constraintStart_toStartOf="parent"
           />
        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:minHeight="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_name"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_description"
            android:layout_width="0dp"
            android:textColorHint="#686767"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/hint_description"
            android:paddingHorizontal="@dimen/_20sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_category">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:textColor="#686767"
            android:text="Giá(*)"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@+id/layout_price"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/hint_price"
            android:textColorHint="#686767"
            android:paddingHorizontal="@dimen/_20sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_price"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:textColor="#686767"
            android:text="Khuyến mãi(*)"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@+id/layout_discount"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="%"
            android:textColorHint="#686767"
            android:paddingHorizontal="@dimen/_20sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_discount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_margin="@dimen/_20sdp"
            android:id="@+id/layout_chose_image"
            android:layout_width="match_parent"
            android:background="@drawable/rounder_background"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_discount">
            <ImageView
                android:id="@+id/img_drink"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentStart="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image"
                />
            <TextView
                android:id="@+id/text_chose_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chọn ảnh sản phẩm"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_toEndOf="@id/img_drink"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_outstanding"
            android:layout_margin="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/rounder_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_chose_image">

            <CheckBox
                android:id="@+id/check_outstanding"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_20sdp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nổi Bật"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/text_add_new"
            app:layout_constraintTop_toBottomOf="@+id/layout_outstanding"
            android:layout_marginTop="@dimen/_20sdp"
           />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
